# ci360-extensions

./: LICENSE  README.md
ci360-debug-agent/: .project  README.md  (+1 more)
code/sas-ci360-veloxpy/: README.md  pyproject.toml  requirements.txt  sasci360veloxpy.ini
code/sas-ci360-veloxpy/examples/: get_static_token.py  run_app_async.py  test_api_interface.py  usage.py  usage_marketing_audience.py  usage_marketing_data.py  usage_marketing_execution.py  usage_marketing_gateway.py
code/sas-ci360-veloxpy/examples/Resources/: BulkUploadEvents.csv  TestDataCustomerData.csv  audience_config.ini  audience_definition.json  update_audience.json
code/sas-ci360-veloxpy/sas_ci360_veloxpy/: __init__.py  api.json  api_interface.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy.egg-info/: requires.txt
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/: __init__.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/base/: base_service.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/marketing_audience/: __init__.py  audiences.py  new_audiences.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/marketing_data/: marketing_data.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/marketing_execution/: marketing_execution.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/apis/marketing_gateway/: marketing_gateway.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/auth/: base.py  bearer.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/config/: config_loader.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/io/: access.py  loader.py  log.py
code/sas-ci360-veloxpy/sas_ci360_veloxpy/utils/: logging.py  scheduler.py
(+703 files in other folders)
